--- a/webshop/templates/registration/password_change_form.html
+++ b/webshop/templates/registration/password_change_form.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 
 {% block content %}
-<form action="." method="post">
+<form action="." method="post">{% csrf_token %}
   <table>
     <caption>{% trans "Change Password" %}</caption>
       {{ form.as_table }}
